--- a/src/styles/editor/components/topbar.css
+++ b/src/styles/editor/components/topbar.css
@@ -1,6 +1,7 @@
 .topbar_global_container{
     width: 100%;
-    background-color: rgb(212, 212, 212);
+    background-color: rgb(37, 49, 43);
+    color: white;
     padding: .5em;
 }
 .topbar_container_items{
