--- a/src/styles/editor/editor.css
+++ b/src/styles/editor/editor.css
@@ -6,7 +6,7 @@
 .editor_global_container {
   display: flex;
   flex-direction: column;
-  
+  width: 100%;
   height: 100%;
 }
 .editor_container_items {
