--- a/src/styles/editor/settings.css
+++ b/src/styles/editor/settings.css
@@ -1,26 +1,55 @@
-.settings_global_container{
-    padding: 1em;
-    background-color: rgb(36, 62, 49);
-    color: white;
-    height: 100%;
-    width: 100%;
+.settings_global_container {
+  background-color: rgb(36, 62, 49);
+  color: white;
+  height: 100%;
+  width: 100%;
 }
 
-
-.settings_container_header{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.settings_container_header {
+  padding: 0.5em 0.4em;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.settings_chip{
-    background-color: rgba(211, 217, 87, 0.676);
-    padding: .4em .8em;
-    border-radius: 20px;
+.settings_chip {
+  background-color: rgba(211, 217, 87, 0.676);
+  padding: 0.4em 0.8em;
+  border-radius: 20px;
 }
 .settings_chip p {
-    font-size: 12px;
-    color: rgb(8, 45, 8);
+  font-size: 12px;
+  color: rgb(8, 45, 8);
+}
+
+.global_setting_details {
+  padding: 0.2em 0.3em;
+}
+
+.global_setting_dimensions__ {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.global_setting_dimensions{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 10px;
+
+}
+
+
+.heigh_input {
+  border: none;
+  outline: none;
+  height: 30px;
+  width: 60px;
+  background-color: rgb(129, 143, 119);
+  padding: .2em .2em;
+  font-family: 'poppins';
 }
